; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lwlock.c_LWLockWaitListLock.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lwlock.c_LWLockWaitListLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_11__ = type { i32 }

@LW_FLAG_LOCKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_12__*)* @LWLockWaitListLock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LWLockWaitListLock(%struct.TYPE_12__* %0) #0 {
  %2 = alloca %struct.TYPE_12__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_11__, align 4
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %2, align 8
  br label %5

5:                                                ; preds = %1, %27
  %6 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %6, i32 0, i32 0
  %8 = load i32, i32* @LW_FLAG_LOCKED, align 4
  %9 = call i32 @pg_atomic_fetch_or_u32(i32* %7, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @LW_FLAG_LOCKED, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %5
  br label %29

15:                                               ; preds = %5
  %16 = call i32 @init_local_spin_delay(%struct.TYPE_11__* %4)
  br label %17

17:                                               ; preds = %22, %15
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @LW_FLAG_LOCKED, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = call i32 @perform_spin_delay(%struct.TYPE_11__* %4)
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %26 = call i32 @pg_atomic_read_u32(i32* %25)
  store i32 %26, i32* %3, align 4
  br label %17

27:                                               ; preds = %17
  %28 = call i32 @finish_spin_delay(%struct.TYPE_11__* %4)
  br label %5

29:                                               ; preds = %14
  ret void
}

declare dso_local i32 @pg_atomic_fetch_or_u32(i32*, i32) #1

declare dso_local i32 @init_local_spin_delay(%struct.TYPE_11__*) #1

declare dso_local i32 @perform_spin_delay(%struct.TYPE_11__*) #1

declare dso_local i32 @pg_atomic_read_u32(i32*) #1

declare dso_local i32 @finish_spin_delay(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
